[package]
name = "bsv-middleware-cloudflare"
version = "0.1.0"
edition = "2021"
description = "BSV authentication and payment middleware for Cloudflare Workers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Calhooon/bsv-middleware-cloudflare"
keywords = ["bsv", "authentication", "cloudflare", "workers", "middleware"]
categories = ["web-programming", "authentication", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Cloudflare Workers
worker = "0.7"

# BSV SDK
bsv-sdk = { package = "bsv-rs", version = "0.3", features = ["auth", "wallet", "transaction", "wasm"] }

# Async
futures = "0.3"
wasm-bindgen-futures = "0.4"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
hex = "0.4"
base64 = "0.22"

# Error handling
thiserror = "1.0"

# WASM utilities
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"

# Random
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

# Crypto (optional, for refund feature)
sha2 = { version = "0.10", optional = true }
ripemd = { version = "0.1", optional = true }

[features]
default = []
refund = ["sha2", "ripemd"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
opt-level = "s"
lto = true
